# droidrun-mcp-server

./: README.md  pyproject.toml  server.py
